src/main/java/com/example/bookclub/errors/UserNicknameDuplicatedException.java
package com.example.bookclub.errors;

public class UserNicknameDuplicatedException extends RuntimeException {
    public UserNicknameDuplicatedException(String nickname) {
        super("Nickname is already Existed: " + nickname);
    }
}
